--- a/miniprogram/pages/breeding/pair/index.wxml
+++ b/miniprogram/pages/breeding/pair/index.wxml
@@ -1,13 +1,13 @@
 <view class="page">
-  <view class="tip">选择一只母鸟进行配对</view>
-  
+  <view class="tip">选择一只{{isMale ? '母' : '公'}}鸟进行配对</view>
+
   <view class="list">
-    <view 
-      class="female-card glass-card" 
-      wx:for="{{females}}" 
+    <view
+      class="mate-card glass-card"
+      wx:for="{{mates}}"
       wx:key="id"
       data-id="{{item.id}}"
-      bindtap="selectFemale"
+      bindtap="selectMate"
     >
       <view class="card-info">
         <view class="breed">{{item.breed}}</view>
@@ -15,7 +15,9 @@
       </view>
       <view class="select-btn">选择</view>
     </view>
-    
-    <empty-state wx:if="{{!females.length && !loading}}" text="暂无可配对母鸟" />
+
+    <view class="empty-state" wx:if="{{!mates.length && !loading}}">
+      <text class="empty-text">暂无可配对{{isMale ? '母' : '公'}}鸟</text>
+    </view>
   </view>
 </view>
