--- a/miniprogram/pages/parrot/add/index.wxss
+++ b/miniprogram/pages/parrot/add/index.wxss
@@ -62,6 +62,68 @@
   border-color: #667eea;
 }
 
+.breed-input-wrapper {
+  position: relative;
+}
+
+.breed-input {
+  width: 100%;
+  padding: 0 24rpx;
+  background: #f8fafc;
+  border: 2rpx solid #e2e8f0;
+  border-radius: 12rpx;
+  font-size: 28rpx;
+  color: #1e293b;
+  box-sizing: border-box;
+  transition: border-color 0.2s;
+  margin: 0;
+  height: 80rpx;
+  line-height: 80rpx;
+}
+
+.breed-input.has-list {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+  border-bottom-color: transparent;
+}
+
+.breed-list {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  background: #fff;
+  border: 2rpx solid #667eea;
+  border-top: none;
+  border-bottom-left-radius: 12rpx;
+  border-bottom-right-radius: 12rpx;
+  max-height: 400rpx;
+  overflow-y: auto;
+  box-shadow: 0 8rpx 24rpx rgba(0, 0, 0, 0.1);
+  display: none;
+  z-index: 1000;
+}
+
+.breed-list.show {
+  display: block;
+}
+
+.breed-item {
+  padding: 20rpx 24rpx;
+  font-size: 28rpx;
+  color: #1e293b;
+  border-bottom: 1rpx solid #f1f5f9;
+  transition: background-color 0.2s;
+}
+
+.breed-item:last-child {
+  border-bottom: none;
+}
+
+.breed-item:active {
+  background: #f8fafc;
+}
+
 .form-item textarea {
   height: 140rpx;
   line-height: 1.5;
@@ -114,7 +176,8 @@
   box-shadow: 0 2rpx 8rpx rgba(0, 0, 0, 0.1);
 }
 
-.photo-item image {
+.photo-item image,
+.photo-item video {
   width: 100%;
   height: 100%;
 }
@@ -133,6 +196,29 @@
   color: #fff;
   font-size: 24rpx;
   font-weight: 300;
+}
+
+.video-play-icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80rpx;
+  height: 80rpx;
+  background: rgba(0, 0, 0, 0.6);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.play-btn {
+  width: 0;
+  height: 0;
+  border-left: 24rpx solid #fff;
+  border-top: 16rpx solid transparent;
+  border-bottom: 16rpx solid transparent;
+  margin-left: 8rpx;
 }
 
 .photo-add {
