--- a/miniprogram/pages/sales/list/index.wxss
+++ b/miniprogram/pages/sales/list/index.wxss
@@ -1,6 +1,7 @@
 .page {
   min-height: 100vh;
   padding-bottom: 160rpx;
+  overflow-x: hidden;
 }
 
 .stats-row {
@@ -70,13 +71,15 @@
 }
 
 .list {
-  padding: 0 24rpx;
+  overflow-x: hidden;
 }
 
 .sale-card {
   display: flex;
   padding: 24rpx;
   margin-bottom: 16rpx;
+  box-sizing: border-box;
+  width: 100%;
 }
 
 .sale-photo {
@@ -158,6 +161,7 @@
   flex-direction: column;
   align-items: flex-end;
   justify-content: center;
+  margin-right: 8rpx;
 }
 
 .sale-price {
