style(miniprogram): 优化UI样式和布局
- 更新首页统计卡片样式
- 优化育种、孵化、销售页面布局
- 改进鹦鹉详情页面展示
- 统一样式风格和间距

--- a/miniprogram/pages/breeding/list/index.wxml
+++ b/miniprogram/pages/breeding/list/index.wxml
@@ -80,6 +80,12 @@
             data-id="{{item.id}}"
           >配对</button>
           <button
+            wx:if="{{!item.isPaired && item.status === 'breeding'}}"
+            class="action-btn remove"
+            catchtap="removeFromBreeding"
+            data-id="{{item.id}}"
+          >移除</button>
+          <button
             wx:if="{{item.isPaired && item.status !== 'incubating'}}"
             class="action-btn unpair"
             catchtap="unpairParrot"
