--- a/miniprogram/pages/parrot/list/index.wxss
+++ b/miniprogram/pages/parrot/list/index.wxss
@@ -134,3 +134,41 @@
   color: #fff;
   line-height: 1;
 }
+
+.skeleton {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16rpx;
+  padding: 20rpx;
+}
+
+.skeleton-item {
+  width: calc(50% - 8rpx);
+  background: #fff;
+  border-radius: 16rpx;
+  padding: 16rpx;
+  box-sizing: border-box;
+}
+
+.skeleton-img {
+  width: 100%;
+  height: 200rpx;
+  background: #f0f0f0;
+  border-radius: 12rpx;
+  margin-bottom: 16rpx;
+}
+
+.skeleton-line {
+  height: 24rpx;
+  background: #f0f0f0;
+  border-radius: 8rpx;
+  margin-bottom: 12rpx;
+}
+
+.skeleton-line.short {
+  width: 60%;
+}
+
+.skeleton-line.long {
+  width: 100%;
+}
