--- a/miniprogram/pages/share/index.wxml
+++ b/miniprogram/pages/share/index.wxml
@@ -10,10 +10,10 @@
     </swiper-item>
   </swiper>
   <view class="no-photo" wx:else>
-    <view class="camera-icon">
-      <view class="camera-body"></view>
-      <view class="camera-lens"></view>
+    <view class="no-photo-bg">
+      <image src="/images/placeholder/parrot.png" mode="aspectFit" />
     </view>
+    <text class="no-photo-text">暂无照片</text>
   </view>
   
   <view class="info-card glass-card">
